NetBSD Problem Report #41902

From martin@aprisoft.de  Mon Aug 17 09:49:10 2009
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 6142663BDF9
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 17 Aug 2009 09:49:10 +0000 (UTC)
Message-Id: <20090817094901.F0C01AF5819@emmas.aprisoft.de>
Date: Mon, 17 Aug 2009 11:49:01 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: X server does not allow switching consoles any more
X-Send-Pr-Version: 3.95

>Number:         41902
>Category:       xsrc
>Synopsis:       X server does not allow switching consoles any more
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    xsrc-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 17 09:50:00 +0000 2009
>Closed-Date:    Tue Aug 18 14:00:35 +0000 2009
>Last-Modified:  Tue Aug 18 14:00:35 +0000 2009
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.15
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD beasty.aprisoft.de 5.99.15 NetBSD 5.99.15 (NIGHT-OWL) #81: Sun Aug 16 14:31:14 CEST 2009 martin@night-owl.duskware.de:/usr/src/sys/arch/i386/compile/NIGHT-OWL i386
Architecture: i386
Machine: i386
>Description:
I updated my i386 notebook from an older version of -current to -current,
gaining the 1.6.2 Xorg server - and now I can't switch VTs any more,
instead Ctrl-Alt-Fn deliver <ESC>[1;5P (etc) to the applicaton.

>How-To-Repeat:
Update, try to switch away from X

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: xsrc-manager@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: xsrc/41902: X server does not allow switching consoles any more
Date: Tue, 18 Aug 2009 14:24:00 +1000

 ah, SetupMouse() changes the pMse->protocol away from "wsmouse" and then
 the next time around, we don't do the ioctl..



 .mrg.

State-Changed-From-To: open->feedback
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 18 Aug 2009 05:35:45 +0000
State-Changed-Why:
please try -current.  it should work.. mostly.  (mine won't switch back to
text mode, if you kill X manually.  even after restarting X.  when it goes
back to the old mode, it shows the screen as it was when X was killed.
)


From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41902 CVS commit: xsrc/external/mit/xf86-input-mouse/dist/src
Date: Tue, 18 Aug 2009 05:34:17 +0000

 Module Name:	xsrc
 Committed By:	mrg
 Date:		Tue Aug 18 05:34:17 UTC 2009

 Modified Files:
 	xsrc/external/mit/xf86-input-mouse/dist/src: mouse.c mouse.h

 Log Message:
 fix the rest of PR 41902: make the mouse re-init wsmouse version.
 the later mouse init changes the "protocol" away from "wsmouse", so
 we don't bother testing for wsmouse but just try it anyway.

 also, reduce (useless?) netbsd diffs to vendor.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 xsrc/external/mit/xf86-input-mouse/dist/src/mouse.c
 cvs rdiff -u -r1.2 -r1.3 xsrc/external/mit/xf86-input-mouse/dist/src/mouse.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Tue, 18 Aug 2009 14:00:35 +0000
State-Changed-Why:
Yep, fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.