fix the rest of PR 41902: make the mouse re-init wsmouse version. the later mouse init changes the "protocol" away from "wsmouse", so we don't bother testing for wsmouse but just try it anyway.

also, reduce (useless?) netbsd diffs to vendor.